[gd_scene load_steps=8 format=3 uid="uid://cwu6yr6pc10ti"]

[ext_resource type="PackedScene" uid="uid://cy564v2px48ji" path="res://UI/inventory/displayer/inventory_display.tscn" id="1_g7es4"]
[ext_resource type="Script" path="res://UI/UI.gd" id="1_ng8w5"]
[ext_resource type="PackedScene" uid="uid://7ab5l5btddb4" path="res://UI/inventory/displayer/hotbar_display.tscn" id="2_cxhkq"]
[ext_resource type="PackedScene" uid="uid://cdyw1b5h4d65f" path="res://UI/stamina/stamina_display.tscn" id="4_61cfb"]
[ext_resource type="Texture2D" uid="uid://5xk6drraft0i" path="res://sun/sun.png" id="5_o5mes"]

[sub_resource type="SystemFont" id="SystemFont_qluju"]
subpixel_positioning = 0

[sub_resource type="AtlasTexture" id="AtlasTexture_y7i0l"]
atlas = ExtResource("5_o5mes")
region = Rect2(0, 0, 24, 24)

[node name="UI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_ng8w5")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InventoryHotbar" parent="Control" instance=ExtResource("2_cxhkq")]
process_mode = 1
layout_mode = 1
offset_top = -40.0

[node name="InventoryDisplay" parent="Control" instance=ExtResource("1_g7es4")]
process_mode = 2
visible = false
layout_mode = 1

[node name="ProgressBar" parent="Control" instance=ExtResource("4_61cfb")]
layout_mode = 1
offset_left = -21.0
offset_top = 113.0
offset_right = -2.0
offset_bottom = -6.0

[node name="Time" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -137.0
offset_bottom = 58.0
grow_horizontal = 0
theme_override_fonts/font = SubResource("SystemFont_qluju")
text = "9"
horizontal_alignment = 2

[node name="Money" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_left = 4.0
offset_top = 23.0
offset_right = 141.0
offset_bottom = 81.0
theme_override_fonts/font = SubResource("SystemFont_qluju")
text = "$12.00"

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 0
offset_left = 5.0
offset_top = 1.0
offset_right = 73.0
offset_bottom = 28.0

[node name="Sun" type="Label" parent="Control/Panel"]
layout_mode = 1
offset_left = 30.0
offset_right = 81.0
offset_bottom = 26.0
theme_override_fonts/font = SubResource("SystemFont_qluju")
text = "1230"

[node name="TextureRect" type="TextureRect" parent="Control/Panel"]
layout_mode = 0
offset_right = 56.0
offset_bottom = 28.0
texture = SubResource("AtlasTexture_y7i0l")
stretch_mode = 2

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(17, 13)
